Se modifica el index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Git and Github</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur saepe ad voluptate enim dignissimos vel aut perferendis, libero impedit aliquid dolor qui itaque voluptatibus quod delectus ipsam culpa officiis?</p>
+
+        <img src="img/fondo morado.png" alt="">
+    </div>
 </body>
 </html>
